--- a/nomad/map.jinja
+++ b/nomad/map.jinja
@@ -2,12 +2,10 @@
 # vim: ft=jinja
 
 {## Start with defaults from defaults.sls ##}
-{% import_yaml 'nomad/defaults.yaml' as default_settings %}
+{% import_yaml 'nomad/defaults.yaml' as defaults %}
 
-{##
-Add any overrides based on CPU architecture.
-##}
-{% set cpu_arch_map = salt['grains.filter_by']({
+{## Add any overrides based on CPU architecture. ##}
+{% set defaults = salt['grains.filter_by']({
         'armv6l': {
             "arch": 'arm'
         },
@@ -19,14 +17,11 @@ Add any overrides based on CPU architecture.
         }
   }
   , grain="cpuarch"
-  , merge=salt['pillar.get']('nomad'))
+  , merge=defaults)
 %}
-{% do default_settings.nomad.update(cpu_arch_map) %}
 
-{##
-Add any overrides based on operating system.
-##}
-{% set os_family_map = salt['grains.filter_by']({
+{## Add any overrides based on operating system. ##}
+{% set defaults = salt['grains.filter_by']({
         'Debian': {
             "git_pkg": 'git',
             "make_pkg": 'make',
@@ -37,14 +32,8 @@ Add any overrides based on operating system.
         'RedHat': {},
   }
   , grain="os_family"
-  , merge=salt['pillar.get']('nomad'))
+  , merge=defaults)
 %}
-{% do default_settings.nomad.update(os_family_map) %}
 
-{## Merge in nomad:* pillar ##}
-{% set nomad = salt['pillar.get'](
-        'nomad',
-        default=default_settings.nomad,
-        merge=True
-    )
-%}
+{## Merge user configuration from in nomad:* pillar ##}
+{% set nomad = salt['pillar.get']('nomad', default=defaults.nomad, merge=True) %}
